public/assets/mobile-style.css
@media (max-width: 767px) {

    input[type=text], input[type=number], input[type=email], input[type=password] {
        font-size: 16px;
    }

    .modal .desc-col.ng-hide {
        display: none !important;
    }

    /* problem, needs margins for # of items left text */
    .modal-overlay .modal-dialog {
        margin: 0;
    }

    .modal-overlay .modal-body {
        padding: 0;
    }

    .modal-body input[type=text] + div, .modal-body .desc-col {
        overflow-y: auto;
    }

    .modal-body input[type=text] + div {
        max-height: 360px;
    }
    .modal-body .desc-col {
        max-height: 396px; /* +36px from height of filter search-bar */
        padding-left: 30px; /* 30 - 15 (row has -15 margin left/right) */
        padding-right: 30px;
    }

    /*** custom checkboxes ***/

    input[type=checkbox] { display:none; } /* to hide the checkbox itself */
    .list-group label.list-group-item:before {
        font-family: FontAwesome;
        display: inline-block;
        font-size: 1.5em;
    }

    .list-group label.list-group-item:before { content: "\f10c"; } /* unchecked icon */
    .list-group label.list-group-item:before { letter-spacing: 10px; } /* space between checkbox and label */

    .list-group label.list-group-item.active:before { content: "\f058"; } /* checked icon */
    .list-group label.list-group-item.active:before { letter-spacing: 7px; } /* allow space for check mark */

    .list-group label.list-group-item.active.disabled { opacity: 0.65; }

    .wizard div > .pagination {
        display: none;
    }
}

